--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             poetry run csv-diff stadfangaskra-old.csv stadfangaskra.csv --key=HNITNUM --singular=address --plural=addresses > message.txt
             echo $'\n[skip ci]' >> message.txt
             git commit -F message.txt && \
-              git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/flother/stadfangaskra.git master \
+              git push -q https://${GITHUB_PERSONAL_ACCESS_TOKEN}@github.com/flother/stadfangaskra.git master \
               || true
 workflows:
   version: 2
