--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ workflows:
   nightly:
     triggers:
       - schedule:
-          cron: "0 23 * * *"
+          cron: "0 22 * * 0"
           filters:
             branches:
               only:
