--- a/.github/workflows/update_addresses.yml
+++ b/.github/workflows/update_addresses.yml
@@ -15,3 +15,14 @@ jobs:
           poetry-version: 1.0
       - name: Install dependencies
         run: poetry install
+      - name: Add new addresses
+        run: |
+          cp stadfangaskra.csv stadfangaskra-old.csv
+          poetry run addresses > stadfangaskra.csv
+          git add stadfangaskra.csv
+          git config --global user.email "stadfangaskrarbot@example.com"
+          git config --global user.name "Staðfangaskrárbot"
+          poetry run csv-diff stadfangaskra-old.csv stadfangaskra.csv --key=HNITNUM --singular=address --plural=addresses > message.txt
+          git commit -F message.txt && \
+            git push -q https://${{ secrets.GITHUB_TOKEN }}@github.com/flother/stadfangaskra.git master \
+            || true
