--- a/.github/workflows/update_addresses.yml
+++ b/.github/workflows/update_addresses.yml
@@ -23,6 +23,9 @@ jobs:
           git config --global user.email "stadfangaskrarbot@example.com"
           git config --global user.name "Staðfangaskrárbot"
           poetry run csv-diff stadfangaskra-old.csv stadfangaskra.csv --key=HNITNUM --singular=address --plural=addresses > message.txt
-          git commit -F message.txt && \
-            git push -q https://${{ secrets.GITHUB_TOKEN }}@github.com/flother/stadfangaskra.git master \
-            || true
+          git commit -F message.txt
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
