Allow action to be manually triggered
So I can test changes to the workflow without waiting until the next Sunday.

--- a/.github/workflows/update_addresses.yml
+++ b/.github/workflows/update_addresses.yml
@@ -2,6 +2,7 @@ name: Update addresses
 on:
   schedule:
     - cron: "0 22 * * 0"
+  workflow_dispatch:
 jobs:
   update-addresses:
     runs-on: "ubuntu-20.04"
